public/css/main.css
/*! HTML5 Boilerplate v5.3.0 | MIT License | https://html5boilerplate.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * These selection rule sets have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */
/*variables*/
/*resets*/
blockquote {
    color: rgba(0, 0, 0, .6);
    padding: 10px 0px 10px 12px;
    font-size: 1.15rem;
}

label {
    font-weight: 100;
    color: rgba(245, 245, 245, .46);
}

article {
    line-height: 1.58;
    letter-spacing: -.003rem;
    font-size: 1.16rem;
}

* {
    font-family: 'Poppins', sans-serif;
}

:root {
    --dark_brown: #6F4A4A;
    --cool_blue: #5B7789;
    --mean_green: #3F6F4C;
    --light_green: #70947B;
}

.article:nth-of-type(1) {
    margin-top: 0;
}

.article {
    background: whitesmoke;
    margin-top: 3rem;
    padding: 1.6rem;
}

hr {
    transition: all .5s ease-out;
}

.hr_bold {
    border-top: none;
    border-bottom: 6px solid var(--dark_brown);
    margin-right: 80%;
}

html {
    height: 100%;
    position: relative;
}

body {
    height: 100%;
    position: relative;
    background-image: url('../img/wov.png');
    background-repeat: repeat;
}

.title-box {
    padding: 1rem;
    background: whitesmoke;
    font-size: 5rem;
    margin-bottom: 1.5rem;
    color: var(--dark_brown);
    transition: all .5s ease-out;
}

.navi {
    background: rosybrown;
    padding: .7rem;
    transition: all .5s ease-out;
}

.navi > ul {
    margin: 0rem;
}

.navi li {
    text-decoration: none;
    display: inline;
    cursor: pointer;
    margin-right: 1.5rem;
    color: whitesmoke;
}

.navi li:hover {
    border-bottom: 1px solid whitesmoke;
}

.content {
    padding: 0;
    z-index: 2;
}

.content-show {
    padding: 1rem 1.6rem;
    background: whitesmoke;
    z-index: 2;
    word-wrap: break-word;
    font-size: 18px

}

.bar {
    background: rosybrown;
    margin-left: -15px;
    padding: 1rem;
    z-index: 1;
    cursor: pointer;
}

.bar a {
    color: whitesmoke;
    transition: all .7s ease;
    border-bottom: none;
}

.bar a:hover {
    text-decoration: none;
    border-bottom: 1px solid whitesmoke;
    transition: all .7s ease;
}

.bar-hide {
    opacity: 0;
    transform: translateX(-400px);
    margin-right: -15px; 
}

.bar-show {
    opacity: 1;
    transform: none;
    margin-right: -15px;
}

.contact-form {
    position: fixed;
    bottom: 20vh;
    right: 0px;
    padding: 1rem;
    background: #009688;
    z-index: 1000;
    transition: all .4s ease-out;
    color: whitesmoke;
    transform: translateX(500px);
    min-width: 320px;
}

.contact-form > i, .about > i {
    cursor: pointer;
}

.about {
    padding: 1rem;
    margin-top: 1rem;
    background: var(--cool_blue);
    transition: all .4s ease-out;
    color: whitesmoke;
    z-index: 1000;
}

.about a {
    color: whitesmoke;
}

.icons {
    margin-top: 1.42rem;
}

.icons a {
    color: whitesmoke;
}

.icons a:hover, .icons a:active, .icons a:focus {
    text-decoration: none;
    color: rgba(0, 0, 60, .6)
}

.icons ul {
    list-style: none;
    padding: 0;
}
.icons li {
    display: inline;
}
.icons li:not(:nth-of-type(1)) {
    margin-left: 1rem;
}

.about-down {
    transform: translateY(-300px);
}

.about-up {
    transform: translateY(0px);
}

.contact-hide {
    opacity: 0;
    transform: translateY(100px);
}

.contact-show {
    opacity: 1;
    transform: translateY(0);
}

.contact-form label {
    display: block;
}

.contact-form label:nth-of-type(2) {
    margin-top: .65rem;
}

.contact-form textarea {
    padding: 1rem;
    border: none;
    width: 100%;
    margin-bottom: 1rem;
    resize: none;
    color: rgba(0, 0, 0, .6);
}

.contact-form input[type="text"] {
    color: rgba(0, 0, 0, .6);
    background: whitesmoke;
    border: none;
    padding: .5rem;
} 

/*scroll navigation*/
.scroll-bar {
    transition: all .5s ease;
    position: fixed;
    bottom: 2rem;
    text-align: center;
    color: whitesmoke;
}

.scroll-bar ul {
    padding-left: 0;   
}

.scroll-bar li {
    list-style: none;
    padding: 1rem;
    cursor: pointer;
    background: rosybrown;
}

.scroll-bar li:hover {
    opacity: .8;
    /*border-bottom: 1px solid whitesmoke;*/
}

.scroll-hide {
    opacity: 0;
    transform: translateX(250px);
}
.scroll-show {
    opacity: 1;
    transform: translateX(0px);
}

.btn {
    border-radius: 0;
}

.colorful {
    background: rosybrown;
}

.zUp {
    z-index: 100;
}

.myPic {
    max-width: 80px;
    border-radius: 100%;
    text-align: center;
    margin: 1rem;
}

footer {
    padding: .7rem;
    margin-top: 5rem;
    background: rosybrown;
    color: whitesmoke;
}

.thanks {
    background: darkcyan;
    color: whitesmoke;
    position: fixed;
    left: 10px;
    top: 20vh;
    transition: all .6s ease-out;
    transform: translateX(-1000px);
    z-index: 10000;
    padding: 1rem;
}

.showThanks {
    transform: translateX(0);
    transition: all .6s ease-out;
}

@media (max-width: 750px) {
    .thanks {
        left: 0;
        top: 0;
        display: flex;
        align-items: center;
        justify-content: center;
        height: 100%;
        width: 100%;
    }
    
    .contact-form {
        width: 100%;
        height: 100%;
        bottom: 0;
        display: flex;
        flex-direction: column;
    }

    .contact-form > h5 {
        font-size: 1.3rem;
    }

    .contact-form > hr {
        margin-top: 0;
    }

    .contact-form > form {
        flex-grow: 1;
        display: flex;
        flex-direction: column;
    }

    .contact-form > form > textarea {
        flex-grow: 1;
    }

    .contact-form > form input {
        width: 100%;
    }
    
    .myPic {
        max-width: 65px;
        margin: 1rem;
    }
    .about {
        position: absolute;
        margin-top: 0;
    }
    .navi {
        position: fixed;
        bottom: 0;
        left: 0;
        z-index: 100;
    }
    .navi > ul {
        padding-left: 0;
    }
    #test {
        position: fixed;
        top: 0;
        right: 0;
        display: flex;
        flex-direction: column;
        align-items: stretch;
    }
    .bar {
        text-align: center;
    }
    .bar-show {
        z-index: 100;
    }
    
}
@media only screen  and (min-width : 1800px) {
    .title-box {
        font-size: 7.1rem;
    }
}








/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
    display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

/*
 * Extends the .visuallyhidden class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
    /* Style adjustments for viewports that meet the condition */
}

@media print,
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 1.25dppx),
       (min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid the additional HTTP request:
   http://www.phpied.com/delay-loading-your-print-css/
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after,
    *:first-letter,
    *:first-line {
        background: transparent !important;
        color: #000 !important; /* Black prints faster:
                                   http://www.sanbeiji.com/archives/953 */
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links that are fragment identifiers,
     * or use the `javascript:` pseudo protocol
     */

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    /*
     * Printing Tables:
     * http://css-discuss.incutio.com/wiki/Printing_Tables
     */

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

